--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,14 +1,10 @@
 .navbar {
-	background-color: hsl(var(--color-card));
-	height: 80px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: var(--text-base);
-	position: sticky;
-	top: 0;
-	z-index: 20;
-	border-bottom: 1px solid hsl(var(--color-border));
+  background: linear-gradient(
+    135deg,
+    hsl(var(--color-primary) / 0.9) 0%,
+    hsl(var(--color-primary) / 0.95) 100%
+  );
+  backdrop-filter: blur(10px);
 }
 
 .navContainer {
