--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -2,16 +2,6 @@
 	min-height: 100vh;
 	padding: var(--space-8);
 }
-/* .container {
-	min-height: 100vh;
-	padding: var(--space-8);
-
-
-	background-image: url("../../assets/Wallpaper.png");
-	background-repeat: repeat; 
-	background-size: 500px 500px; 
-	background-color: #fdf6f0; 
-} */
 
 .hero {
 	text-align: center;
@@ -37,7 +27,7 @@
 .ctaButton {
 	display: inline-block;
 	background-color: hsl(var(--color-primary));
-	color: white;
+	color: #78206e;
 	padding: var(--space-4) var(--space-8);
 	border-radius: var(--radius);
 	text-decoration: none;
