--- a/client/src/pages/About/About.module.css
+++ b/client/src/pages/About/About.module.css
@@ -52,7 +52,7 @@
 	display: inline-block;
 	padding: var(--space-3) var(--space-6);
 	background-color: hsl(var(--color-primary));
-	color: #78206e;
+	color: var(--color-primary);
 	text-decoration: none;
 	border-radius: var(--radius);
 	transition: all 0.3s ease;
