--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,7 @@ body {
 [data-theme="halloween"] {
 	--color-primary: 307 58% 30%;
 	--color-secondary: 274 82% 38%;
+	--color-secondary-hover: 274 82% 30%;
 	--navbar-gradient: linear-gradient(
 		135deg,
 		hsl(25 95% 53% / 0.9) 0%,
@@ -61,12 +62,13 @@ body {
 [data-theme="christmas"] {
 	--color-primary: 356 71% 46%;
 	--color-secondary: 0 84% 60%;
+	--color-secondary-hover: 0 84% 50%;
 	--navbar-gradient: linear-gradient(
 		135deg,
 		hsl(142 76% 36% / 0.9) 0%,
 		hsl(142 70% 32% / 0.9) 100%
 	);
-	--color-accent: 43 96% 56%; /* Or */
+	--color-accent: 43 96% 56%;
 	--color-background: 0 0% 100%;
 	--color-foreground: 0 0% 15%;
 	--color-muted: 142 20% 85%;
@@ -77,14 +79,15 @@ body {
 }
 
 [data-theme="carnival"] {
-	--color-primary: 51 100% 50%;
+	--color-primary: 50 100% 50%;
 	--color-secondary: 172 66% 50%;
+	--color-secondary-hover: 172 66% 40%;
 	--navbar-gradient: linear-gradient(
 		135deg,
 		hsl(292 84% 60% / 0.9) 0%,
 		hsl(292 78% 55% / 0.9) 100%
 	);
-	--color-accent: 36 100% 64%; /* Orange vif */
+	--color-accent: 36 100% 64%;
 	--color-background: 0 0% 100%;
 	--color-foreground: 0 0% 15%;
 	--color-muted: 292 20% 85%;
