--- a/client/src/pages/Costumes/Costumes.module.css
+++ b/client/src/pages/Costumes/Costumes.module.css
@@ -143,3 +143,11 @@
 	align-items: center;
 	padding: 2rem;
 }
+
+.loadingWrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	width: 100%;
+}
