--- a/client/src/pages/Categories/Categories.module.css
+++ b/client/src/pages/Categories/Categories.module.css
@@ -251,3 +251,11 @@
 		height: 120px;
 	}
 }
+
+.loadingWrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	width: 100%;
+}
